--- a/views/dice.hbs
+++ b/views/dice.hbs
@@ -2,5 +2,7 @@
     <h2>Dice Roll:</h2>
 </div>
 <div>
-    {{{diceImage}}}
+    {{#each diceRolls}}
+    <img src="/images/dice/d{{this}}.png">
+    {{/each}}
 </div>
